# docker_postgress_data_from_csv

./: Dockerfile  README.md  docker-compose.yaml  populate_db.py  pyproject.toml  requirements.txt
scripts/sql/: create_tables.sql
